fixes vh issue on mobile devices

--- a/client/style.css
+++ b/client/style.css
@@ -139,6 +139,9 @@ form {
   display: flex;
   flex-direction: row;
   gap: 10px;
+
+  position: sticky;
+  bottom: 0;
 }
 
 textarea {
